; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/ffmpeg-mux/extr_ffmpeg-mux.c_ffmpeg_mux_get_extra_data.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/ffmpeg-mux/extr_ffmpeg-mux.c_ffmpeg_mux_get_extra_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ffmpeg_mux = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ffmpeg_mux*)* @ffmpeg_mux_get_extra_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ffmpeg_mux_get_extra_data(%struct.ffmpeg_mux* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ffmpeg_mux*, align 8
  %4 = alloca i32, align 4
  store %struct.ffmpeg_mux* %0, %struct.ffmpeg_mux** %3, align 8
  %5 = load %struct.ffmpeg_mux*, %struct.ffmpeg_mux** %3, align 8
  %6 = getelementptr inbounds %struct.ffmpeg_mux, %struct.ffmpeg_mux* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load %struct.ffmpeg_mux*, %struct.ffmpeg_mux** %3, align 8
  %12 = call i32 @ffmpeg_mux_get_header(%struct.ffmpeg_mux* %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %10
  store i32 0, i32* %2, align 4
  br label %34

15:                                               ; preds = %10
  br label %16

16:                                               ; preds = %15, %1
  store i32 0, i32* %4, align 4
  br label %17

17:                                               ; preds = %30, %16
  %18 = load i32, i32* %4, align 4
  %19 = load %struct.ffmpeg_mux*, %struct.ffmpeg_mux** %3, align 8
  %20 = getelementptr inbounds %struct.ffmpeg_mux, %struct.ffmpeg_mux* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = icmp slt i32 %18, %22
  br i1 %23, label %24, label %33

24:                                               ; preds = %17
  %25 = load %struct.ffmpeg_mux*, %struct.ffmpeg_mux** %3, align 8
  %26 = call i32 @ffmpeg_mux_get_header(%struct.ffmpeg_mux* %25)
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %29, label %28

28:                                               ; preds = %24
  store i32 0, i32* %2, align 4
  br label %34

29:                                               ; preds = %24
  br label %30

30:                                               ; preds = %29
  %31 = load i32, i32* %4, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %4, align 4
  br label %17

33:                                               ; preds = %17
  store i32 1, i32* %2, align 4
  br label %34

34:                                               ; preds = %33, %28, %14
  %35 = load i32, i32* %2, align 4
  ret i32 %35
}

declare dso_local i32 @ffmpeg_mux_get_header(%struct.ffmpeg_mux*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
